test/negative/004_invalid_escape.fx
// expect: escape sequence
val s = "bad \q escape"
println(s)
