test/negative/004_invalid_escape.err
004_invalid_escape.fx:2:10: error: unvalid escape sequence
